--- a/less/variables.less
+++ b/less/variables.less
@@ -12,7 +12,7 @@
 @footer-background: @wild-sand;
 @footer-font-color: @waterloo;
 
-// Color Vars
+// Color Variables
 @wild-sand: #F6F6F6;
 @river-bend: #454A59;
 @sea-shell: #F1F1F1;
@@ -24,3 +24,4 @@
 @border-real: #dee2e6;
 
 // Mobile var
+@phone: ~"(max-width: 500px)";
